k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: {name: oficina-api, namespace: oficina}
spec:
  replicas: 2
  selector: {matchLabels: {app: oficina-api}}
  template:
    metadata: {labels: {app: oficina-api}}
    spec:
      securityContext: {runAsNonRoot: true, seccompProfile: {type: RuntimeDefault}}
      containers:
        - name: api
          image: ghcr.io/yasminluna/fiap_cha:latest
          imagePullPolicy: IfNotPresent
          ports: [{containerPort: 8000}]
          resources:
            requests: {cpu: 100m, memory: 128Mi}
            limits: {cpu: 500m, memory: 512Mi}
          readinessProbe: {httpGet: {path: /ready, port: 8000}, initialDelaySeconds: 5, periodSeconds: 10}
          livenessProbe: {httpGet: {path: /health, port: 8000}, initialDelaySeconds: 15, periodSeconds: 20}
          securityContext: {allowPrivilegeEscalation: false, readOnlyRootFilesystem: true, capabilities: {drop: ["ALL"]}}
